Fixed some overlays in the juicer feed from being too small.

--- a/dev/scss/components/_social-feed.scss
+++ b/dev/scss/components/_social-feed.scss
@@ -1,6 +1,10 @@
+
 .panel--instagram {
   h1 {
     display: none !important;
+  }
+  .juicer-feed .instagram {
+    background: $actualWhite;
   }
   .feed-item {
     transition: filter 0.6s;
@@ -52,6 +56,7 @@ body.home .j-overlay {
 
   .j-post-overlay.juicer-feed {
     @include Aileron;
+    min-width: 1100px;
   }
 
   .image {
